convert links to markdown format

--- a/1. User management.md
+++ b/1. User management.md
@@ -1,7 +1,7 @@
 # 1. User management
-[[1.1. User Login]]
-[[1.2. Users list]]
-[[1.3. Create user]]
-[[1.4. Edit user profile, reset password]]
+[1.1. User Login](1.1.%20User%20Login.md)
+[1.2. Users list](1.2.%20Users%20list.md)
+[1.3. Create user](1.3.%20Create%20user.md)
+[1.4. Edit user profile, reset password](1.4.%20Edit%20user%20profile,%20reset%20password.md)
 
 
