--- a/2. Storage management.md
+++ b/2. Storage management.md
@@ -1,8 +1,8 @@
 # 2. Storage management
-[[2.1. Create, edit storage location]]
-[[2.2. Delete storage]]
-[[2.3. View reagents in a storage]]
-[[2.4. Move items between storages]]
+[2.1. Create, edit storage location](2.1.%20Create,%20edit%20storage%20location.md)
+[2.2. Delete storage](2.2.%20Delete%20storage.md)
+[2.3. View reagents in a storage](2.3.%20View%20reagents%20in%20a%20storage.md)
+[2.4. Move items between storages](2.4.%20Move%20items%20between%20storages.md)
 
 
 
