--- a/3. Reagent request management.md
+++ b/3. Reagent request management.md
@@ -1,6 +1,6 @@
 # 3. Reagent request management
-[[3.1. Reagent requests list]]
-[[3.2. Create reagent request]]
+[3.1. Reagent requests list](3.1.%20Reagent%20requests%20list.md)
+[3.2. Create reagent request](3.2.%20Create%20reagent%20request.md)
 
 A reagent request is a request made by a chemist or researcher to purchase a specific chemical reagent for use in their laboratory experiments. The system allows users to create reagent requests, view their list of reagent requests, and track the status of each request throughout its lifecycle.
 
