--- a/5. Reagents and samples management.md
+++ b/5. Reagents and samples management.md
@@ -1,6 +1,6 @@
 # 5. Reagents and samples management
-[[5.1. Reagents list]]
-[[5.2. Add, edit sample]]
-[[5.3. Add, edit reagent]]
-[[5.4. Create reagents from the order]]
+[5.1. Reagents list](5.1.%20Reagents%20list.md)
+[5.2. Add, edit sample](5.2.%20Add,%20edit%20sample.md)
+[5.3. Add, edit reagent](5.3.%20Add,%20edit%20reagent.md)
+[5.4. Create reagents from the order](5.4.%20Create%20reagents%20from%20the%20order.md)
 
