--- a/4. Order Management.md
+++ b/4. Order Management.md
@@ -1,7 +1,7 @@
 # 4. Order Management
-[[4.1. Create Order]]
-[[4.2. Orders List]]
-[[4.3. Change order status]]
+[4.1. Create Order](4.1.%20Create%20Order.md)
+[4.2. Orders List](4.2.%20Orders%20List.md)
+[4.3. Change order status](4.3.%20Change%20order%20status.md)
 
 An order created by a procurement officer in the system is a request to purchase one or more chemical reagents.
 
