Update 5.1. Reagents list.md

--- a/5.1. Reagents list.md
+++ b/5.1. Reagents list.md
@@ -12,5 +12,5 @@ As user, I want to be able to see reagents and samples list
      * Storage Location
      * Action buttons (edit)
 2. Filtering and Sorting:
-   * The list of reagents and samples should be sortable and filterable by columns (name, category, status).
+   * The list of reagents and samples should be sortable and filterable by columns (name, category).
 3. It should be possible to search reagents by chemical structure / substructure
