Some fixes in reagents and samples section

--- a/5.2. Add, edit sample.md
+++ b/5.2. Add, edit sample.md
@@ -1,5 +1,5 @@
 # 5.2. Add, edit sample
-1. As user I want toadd and edit reagents in the system.
+1. As a user I want to add and edit reagents in the system.
 
 * Reagent List Page should have a "Create sample" button
 
@@ -7,13 +7,13 @@
    * When a user clicks on a reagent in the list, they should be taken to a detailed page that displays information about the reagent.
    * The page should show all sample fields
 2. Add Sample Form:
-   * A form that allows users to add a new reagent to the system.
+   * A form that allows users to add a new sample to the system.
    * The form should include fields for:
      * Name
      * Structure (Chemical structure editor)
      * Description
      * Quantity unit (e.g., ml)
-     * size (500 ml)
+     * Quantity (500 ml)
      * Quantity Left
      * List of reagents/samples used for preparation of this sample
      * expirationDate
