--- a/5.3. Add, edit reagent.md
+++ b/5.3. Add, edit reagent.md
@@ -1,8 +1,8 @@
 # 5.3. Add, edit reagent
-As user I want to add and edit reagents in the system.
+As a user I want to add and edit reagents in the system.
 
 * Reagent List Page should have a "Create reagent" button
-* Typically reagents are created when the order is fulfilled but it should be possible to create reagents without initial order.
+* Typically, reagents are created when the order is fulfilled, but it should be possible to create reagents without initial order.
 
 1. Reagent Detail Page:
    * When a user clicks on a reagent in the list, they should be taken to a detailed page that displays information about the reagent.
@@ -13,7 +13,7 @@ As user I want to add and edit reagents in the system.
      * Description
      * Structure (rendered image)
      * CAS number
-     * Producer
+     * Producer (Supplier)
      * Catalog ID
      * Catalog link
      * Units (e.g., bottle 500 ml)
@@ -26,12 +26,12 @@ As user I want to add and edit reagents in the system.
      * Name
      * Structure (Chemical structure editor)
      * CAS number
-     * Producer
+     * Producer (Supplier)
      * Catalog ID
      * Catalog link
      * Price per unit ($)
      * Quantity unit (e.g., ml)
-     * size (e.g., 500 ml)
+     * Quantity (initial quantity, e.g., 500 ml)
      * ^^^ the fields above are from an order entity
      * Quantity Left
      * expirationDate
