Fix for orders and reagent requests

--- a/3.2. Create reagent request.md
+++ b/3.2. Create reagent request.md
@@ -7,7 +7,7 @@ As a researcher, I want to be able to create a reagent request
    * Structure - SMILES format (input type="text", optional)
    * Structure - Rendered Structure from Smiles, image, readonly
    * CAS Number (input type="text", optional) (in future Chemical structure could be searched in database based onCAS)
-   * Desired Quantity (input type="text", mandatory)
+   * Desired Quantity (input type="text", mandatory) (e.g. 5g / 6l / 5 bottles * 5g, just a field with free text)
    * User Comments (input type="textarea", optional))
    * Procurement Comments (input type="textarea", readonly)
    * Status - readonly
