--- a/4.1. Create Order.md
+++ b/4.1. Create Order.md
@@ -4,25 +4,26 @@ As a procurement officer, I want to be able to create a new order for reagents.
 1. Order creation from is available on Orders Management Page via "Create new order" button
 2. The form should have next fields:
    * Title, text input with a maximum length of 200 characters, mandatory
-   * Seller: autocomplete with previous seller options, max 200 chars, optional
+   * Seller (Supplier): autocomplete with previous seller options, max 200 chars, optional
    * Table with reagents
 3. Add reagent items to the order:
-   * A list of available reagents should be displayed in a table format, with each reagent having a unique ID.
+   * A list of the reagents in the order should be displayed in a table format, with each reagent having a unique ID.
    * When I click on a reagent, its details should be displayed in a pop-up window, including next fields:
      * Name (text input, mandatory)
      * Structure. (text input, SMILES, optional)
-     * Structure (rendered imare, read only)
+     * Structure (rendered image, read only)
      * CAS (text input, optional)
      * Producer (autocomplete based on previous values, optional)
      * CatalogID (text input, optional)
      * Catalog link (text input, url, optional)
-     * Units (text input, mandatory), e.g. bottle 500 ml
-     * pricePer unit (number), e.g. 45.15$
-     * quantity ( number), e.g. 6, means we buy 6 bottles 500 ml each
+     * Quantity (text input, mandatory), e.g. 500  - means bottle 500 ml
+     * Unit (text input, mandatory), e.g. ml - bottle 500 ml
+     * pricePer unit (number), e.g. 45.15$ ($ sign - hardcode, optional - make a part of a global system config)
+     * Amount ( number), e.g. 6, means we buy 6 bottles 500 ml each
 4. User should be able to edit and delete reagents in the order.
 5. Form Submission:
    When the user submits the form, the system should create a new order object in the database, with the following properties:
    * id: a unique identifier (e.g., UUID)
-   * userId: the ID of the who created the request
+   * userId: the ID of the user who created the request
    * creationDate: the date and time the request was created
    * status: pending
