--- a/4. Order Management.md
+++ b/4. Order Management.md
@@ -23,7 +23,7 @@ An order created by a procurement officer in the system is a request to purchase
 #### The Order object in the database will have the following properties:
 
 * id: a unique identifier (e.g., UUID)
-* userId: the ID of the who created the request
+* userId: the ID of the user who created the request
 * creationDate: the date and time the request was created
 * status
 * list of reagents in the order
