--- a/4.1. Create Order.md
+++ b/4.1. Create Order.md
@@ -25,5 +25,5 @@ As a procurement officer, I want to be able to create a new order for reagents.
    When the user submits the form, the system should create a new order object in the database, with the following properties:
    * id: a unique identifier (e.g., UUID)
    * userId: the ID of the user who created the request
-   * creationDate: the date and time the request was created
+   * creationDate: the date and time the order was created
    * status: pending
