--- a/4.1.1. Create Order from Reagent requests.md
+++ b/4.1.1. Create Order from Reagent requests.md
@@ -5,5 +5,5 @@ As a procurement officer, I want to be able to create a new order for reagents u
    * It is possible to see a list of reagent requests
    * It is possible to select a reagent request and add it to the order
 2. Adding a reagent request to the order
-   * Creates a new row in the reagents table in the order and prefill it with fields dorm reagent request
-   * Creates a link between reagent request and the order - changes if ther order status should update statuses of all linked request.
+   * Creates a new row in the reagents table in the order and prefill it with fields from reagent request
+   * Creates a link between reagent request and the order - if the order status changes it should update statuses of all linked requests.
